--- a/flooding_lib/tools/exporttool/templates/export/exports_new.html
+++ b/flooding_lib/tools/exporttool/templates/export/exports_new.html
@@ -18,6 +18,10 @@
               <th>{{form.gridsize.label_tag}}</th>
               <td>{{form.gridsize}}</td>
             </tr>
+            <tr>
+              <th>{{form.public.label_tag}}</th>
+              <td>{{form.public}}</td>
+            </tr>
 	  </table>
 	</td>
 	<td width="50%" valign="top">
