--- a/flooding_lib/tools/exporttool/templates/export/exports_overview.html
+++ b/flooding_lib/tools/exporttool/templates/export/exports_overview.html
@@ -25,6 +25,12 @@
             <td width="75"><b>{% trans "State"%}</b></td>
             <td width="80"><b>{% trans "Result file" %}</b></td>
             <td width="50"><b>{% trans "Edit" %}</b></td>
+          {% if show_archived %}
+            <td width="50"><b>{% trans "De-archive" %}</b></td>
+            <td width="50"><b>{% trans "Delete" %}</b></td>
+          {% else %}
+            <td width="50"><b>{% trans "Archive" %}</b></td>
+          {% endif %}
           </thead>
           <tbody>
             {% if export_run_list %}
@@ -49,6 +55,20 @@
                   <td>
                     <a href="{% url "flooding_tools_reuse_export" export_run.id %}">{% trans "Edit" %}</a>
                   </td>
+                  {% if show_archived %}
+                  <td>
+                    <a href="{% url "flooding_tools_archive_export" export_run.id %}">{% trans "De-archive" %}</a>
+                  </td>
+                  <td>
+                  {% if request.user == export_run.owner %}
+                    <a href="{% url "flooding_tools_delete_export" export_run.id %}">{% trans "Delete" %}</a>
+                  {% endif %}
+                  </td>
+                  {% else %}
+                  <td>
+                    <a href="{% url "flooding_tools_archive_export" export_run.id %}">{% trans "Archive" %}</a>
+                  </td>
+                  {% endif %}
                 </tr>
               {% endfor %}
 
@@ -67,5 +87,15 @@
   <br>
   {% if has_create_rights %}
     <a href="{% url 'flooding_tools_export_new_export_index' %}" >{% trans "New export run" %}</a>
+  {% endif %}
+
+  {% if show_archived %}
+    <p>
+      <a href="{% url 'flooding_tools_export_index' %}">Terug naar actieve exports</a>
+    </p>
+  {% else %}
+    <p>
+      <a href="{% url 'flooding_tools_export_index' %}?show_archived=1">Gearchiveerde exports</a>
+    </p>
   {% endif %}
 {% endblock %}
