Max 300 scenarios per export

--- a/flooding_lib/tools/exporttool/templates/export/exports_new.html
+++ b/flooding_lib/tools/exporttool/templates/export/exports_new.html
@@ -47,6 +47,9 @@
 	  <hr>
               {{form.export_scenario_data}}
               {{form.export_scenario_data.label_tag}}
+          <br>
+          <label>Let op: als gekozen wordt voor alle scenariodata, worden er geen
+            kaarten ge&euml;xporteerd.</label>
 	</td>
       </tr>
       <tr>
