Set Order_by and distinct on the same field in django 1.6, use |save|markdown templatetags.

--- a/flooding_base/templates/base/objecttable.html
+++ b/flooding_base/templates/base/objecttable.html
@@ -15,7 +15,7 @@
 	{% for field in row %}
 	<td>
 	  {% if field.url %}<a href="{{ field.url }}" {% if field.target %} target="{{ field.target }}" {% endif %}>{% endif %}
-	    {{ field.value|markdown }}
+	    {{ field.value|safe|markdown }}
 	    {% if not field.urlpost %}{% if field.icon %}
 	    <img src="{{ field.icon }}.png"{% if field.icontitle %} title="{{ field.icontitle }}"{% endif %}/>
 	    {% endif %}{% endif %}
