Convert base language to en, fix css in Table, set exportrun to public visible on True by default.

--- a/flooding_base/templates/gui/translated_strings.html
+++ b/flooding_base/templates/gui/translated_strings.html
@@ -116,3 +116,5 @@ ST_EXT_WATER_LAVEL = "Buitenwaterstand";
 ST_BREACH_ = "Bres";
 
 ST_HOUR = "uur";
+
+ST_NO_ITEM_TO_SHOW = "Geen item beschikbaar."
