--- a/flooding_base/templates/gui/translated_strings_EN.html
+++ b/flooding_base/templates/gui/translated_strings_EN.html
@@ -116,3 +116,5 @@ ST_EXT_WATER_LAVEL = "External water level";
 ST_BREACH_ = "Breach";
 
 ST_HOUR = "hour";
+
+ST_NO_ITEM_TO_SHOW = "No item to show."
