--- a/flooding_base/templates/lizard/base.html
+++ b/flooding_base/templates/lizard/base.html
@@ -10,9 +10,9 @@ options (incomplete):
     <title>{% block title %}Base template{% endblock %}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
     {% block stylesheets %}
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ STATIC_URL }}admin/css/base.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ STATIC_URL }}style/style.css"/>
-    <link rel="stylesheet" type="text/css" media="print" href="{{ STATIC_URL }}style/print.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="/static_media/admin/css/base.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="/static_media/style/style.css"/>
+    <link rel="stylesheet" type="text/css" media="print" href="/static_media/style/print.css"/>
     {% endblock stylesheets %}
     {% block javascripts %}
     {% endblock javascripts%}
