--- a/flooding_lib/templates/flooding/showattachments.html
+++ b/flooding_lib/templates/flooding/showattachments.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 {% if succeeded %}
-     {% trans 'Het opslaan is gelukt. U kunt een nieuw bestand toevoegen of dit venster sluiten.' %}
+     {% trans 'The file saved successful. You kan add a new one or close the window.' %}
 {% endif %}
 <div style="height:300px; overflow:auto">
 	<table class="timeseriesWrapper"><tr><td>
