--- a/flooding_lib/tools/importtool/templates/import/imports_overview.html
+++ b/flooding_lib/tools/importtool/templates/import/imports_overview.html
@@ -11,9 +11,9 @@
 {% block bodyarguments %} class="scrollable" {% endblock %}
 {% block content %}
 <p>
-<a href="{% url "flooding_excel_import_export" %}">{% trans 'Download and upload all metadata of a project here' %}</a>
+<a href="{% url "flooding_excel_import_export" %}">{% trans "Download and upload all metadata of a project here." %}</a>
 <br>
-<a href="{% url "flooding_tools_ror_keringen_page" %}">{% trans  'Download and upload here the file of the ROR defenses and waters.' %}</a>
+<a href="{% url "flooding_tools_ror_keringen_page" %}">{% trans  "Download and upload here the file of the ROR defenses and waters." %}</a>
 </p>
 		<h1>
 		{% trans "Overview" %}
