--- a/flooding_lib/templates/flooding/breachinfo.html
+++ b/flooding_lib/templates/flooding/breachinfo.html
@@ -10,7 +10,7 @@ Flooding: {% trans 'Breach information' %}
 {% endblock %}
 
 {% block javascripts %}
-<script type="text/javascript" src="/static_media/weblib/OpenLayers-2.8/OpenLayers.js" type="text/javascript"> </script>
+<script type="text/javascript" src="/static_media/weblib/OpenLayers-2.12-rc7/OpenLayers.js" type="text/javascript"> </script>
 <script type="text/javascript" src="{% url "root_url" %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="{% url "root_url" %}static_media/flooding_lib/breachinfo.js"></script>
 {% endblock javascripts %}
