Replace help file.

--- a/flooding_base/templates/gui/help.html
+++ b/flooding_base/templates/gui/help.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<h1>Handleiding</h1>
-		<a href="{{ STATIC_URL }}docs/Gebruikershandleiding Lizardflooding 3.0.pdf">Gebruikershandleiding Lizard-flooding 3.0 (PDF, 6 MB)</a>
+		<a href="{{ STATIC_URL }}docs/Gebruikershandleiding Lizardflooding.pdf">Gebruikershandleiding Lizard-flooding (PDF, 6 MB)</a>
 		<h1>Overig</h1>
 		<a href="{{ STATIC_URL }}docs/R0022 Gebruikershandleiding_versie1.0.pdf">Documentatie HIS Schade slachtoffers module (PDF, 5 MB)</a>
 	</body>
