--- a/flooding_lib/tools/gdmapstool/templates/gdmapprojects_overview.html
+++ b/flooding_lib/tools/gdmapstool/templates/gdmapprojects_overview.html
@@ -14,14 +14,21 @@
   <h1>{% trans "Gebiedsdekkende kaarten" %}</h1>
   
   {% for project in gd_map_projects %}
-    <p><strong>{{project.name}}</strong>
-    {% for map in project.gdmap_set.all %}
-      <ul class="cell">
-        <li>
-          <a href="{% url 'flooding_gdmapstool_mapdetails' map.id %}">{{ map.name }}</a>
-        </li>
-      </ul>
-    {% endfor %}
+    <p><strong>GDProject: {{project.name}}</strong>
+    <table class="timeseriesWrapper timeseries" summary="timeseries">
+      <tdbody>
+      {% for map in project.gdmap_set.all %}
+        <tr class="{% cycle 'cellDark' 'cell'%}">
+	  <td width="375">
+	    <a href="{% url 'flooding_gdmapstool_mapdetails' map.id %}">{{ map.name }}</a> 
+	  </td>
+	  <td width="80">
+	    <a href="{% url 'flooding_gdmapstool_reuse_gdmap' map.id %}">Bewerk</a>
+	  </td>
+	</tr>
+      {% endfor %}
+      </tdbody>
+    </table> 
   {% endfor %}
 
   <!-- <br> -->
