Fix remove from second grid.

--- a/flooding_lib/tools/gdmapstool/templates/gdmap_form.html
+++ b/flooding_lib/tools/gdmapstool/templates/gdmap_form.html
@@ -5,7 +5,7 @@
     <table style="float:left; width:100%;">
       <tr>
 	<td>
-          <label>Let op: Hier kan je een opmerking plaatsen.</label>
+          <label></label>
 	</td>
       </tr>
       <tr width="100%">
