--- a/flooding_base/templates/gui/translated_strings.html
+++ b/flooding_base/templates/gui/translated_strings.html
@@ -12,7 +12,7 @@ ST_RESULTS = "Resultaten";
 ST_TABLE = "Tabel";
 ST_IMPORT = "Importeren";
 ST_EXPORT = "Exporteren";
-ST_GDMAP = "GD kaarten"
+ST_GDMAP = "Kaarten"
 ST_REGION = "Regio";
 ST_BREACH = "Doorbraak";
 ST_SCENARIO = "Scenario";
