--- a/flooding_base/templates/gui/translated_strings_EN.html
+++ b/flooding_base/templates/gui/translated_strings_EN.html
@@ -12,7 +12,7 @@ ST_RESULTS = "Results";
 ST_TABLE = "Table";
 ST_IMPORT = "Import";
 ST_EXPORT = "Export";
-ST_GDMAP = "Area covered maps";
+ST_GDMAP = "Maps";
 ST_REGION = "Region";
 ST_BREACH = "Breach";
 ST_SCENARIO = "Scenario";
