Fix after code review.

--- a/flooding_lib/tools/gdmapstool/templates/gdmap_edit.html
+++ b/flooding_lib/tools/gdmapstool/templates/gdmap_edit.html
@@ -28,17 +28,17 @@
       
     </script>
 
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Core.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Foundation.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Containers.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Grids.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Forms.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_DataBinding.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/Isomorphic_NenS_skin/load_skin.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/SCpatch.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/lib/NGeneral.js"></SCRIPT>	
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}get_config.js"></SCRIPT>
-    <SCRIPT type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/JSONparser.js"></SCRIPT>   
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Core.js"></script>
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Foundation.js"></script>
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Containers.js"></script>
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Grids.js"></script>
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_Forms.js"></script>
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/weblib/smartclient/9.0/isomorphic/system/modules/ISC_DataBinding.js"></script>
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/Isomorphic_NenS_skin/load_skin.js"></script>
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/SCpatch.js"></script>
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/lib/NGeneral.js"></script>	
+    <script type="text/javascript" SRC="{% url "root_url" %}get_config.js"></script>
+    <script type="text/javascript" SRC="{% url "root_url" %}static_media/scripts/shared/JSONparser.js"></script>   
 	
   </head>
   <body>
