Add link to example file in template.

--- a/flooding_lib/tools/importtool/templates/import/groupimport_new.html
+++ b/flooding_lib/tools/importtool/templates/import/groupimport_new.html
@@ -15,6 +15,7 @@
 		<li><a href="/static_media/examples/Groupimport_type1.xls">Voorbeeld Excel groepimport type 1</a> Scenario's van overstromingen als gevolg van een doorbraak in een primaire kering.</li>
 		<li><a href="/static_media/examples/Groupimport_type2.xls">Voorbeeld Excel groepimport type 2</a> Scenario's van overstromingen als gevolg van een doorbraak in een genormeerde regionale kering.</li>
 		<li><a href="/static_media/examples/Groupimport_type3.xls">Voorbeeld Excel groepimport type 3</a> Scenario's van overstromingen van niet door genormeerde keringen beschermd gebied (zowel hoofdwater als regionaal water).</li>
+		<li><a href="/static_media/examples/Groupimport_3Di.xls">Voorbeeld Excel groepimport 3Di scenario's</a> Scenario's op basis van resultaten van een 3Di berekening.</li>
 		</ul>
 
 		<BR>
