Add help doc about 3Di scenarios.

--- a/flooding_base/templates/gui/help.html
+++ b/flooding_base/templates/gui/help.html
@@ -13,8 +13,9 @@
 	</head>
 	<body>
 		<h1>Handleiding</h1>
-		<a href="{{ STATIC_URL }}docs/Gebruikershandleiding Lizardflooding.pdf">Gebruikershandleiding Lizard-flooding (PDF, 6 MB)</a>
+		<p><a href="{{ STATIC_URL }}docs/Gebruikershandleiding Lizardflooding.pdf">Gebruikershandleiding Lizard-flooding (PDF, 6 MB)</a></p>
 		<h1>Overig</h1>
-		<a href="{{ STATIC_URL }}docs/R0022 Gebruikershandleiding_versie1.0.pdf">Documentatie HIS Schade slachtoffers module (PDF, 5 MB)</a>
+		<p><a href="{{ STATIC_URL }}docs/R0022 Gebruikershandleiding_versie1.0.pdf">Documentatie HIS Schade slachtoffers module (PDF, 5 MB)</a></p>
+		<p><a href="{{ STATIC_URL }}docs/gebruikershandleiding_toevoegen_3Di_scenarios.pdf">Gebruikershandleiding toevoegen 3Di-scenarios (PDF, 2 MB)</a></p>
 	</body>
 </html>
